<resources>
    <string name="app_name">西西英语</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tip_please_input_account">请输入账号</string>
    <string name="tip_please_input_email">请输入邮箱</string>
    <string name="tip_account_error">无效的账号!</string>
    <string name="tip_email_error">无效的邮箱!</string>
    <string name="title_account">账号</string>
    <string name="title_email">邮箱</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>

    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_code">请输入验证码</string>
    <string name="tip_verify_password_error">请正确输入密码</string>
    <string name="tip_verify_code_error">请正确输入密码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="action_get_verify_code">获取验证码</string>

    <string name="guide_key_sliding_root_navigation">guide_key_sliding_root_navigation</string>
    <string name="title_activity_video">VideoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="agora_app_id">459509d3bd1c4b73b38a25b99c60d28a</string>
    <string name="fake_user_name">wasd003</string>
    <string name="fake_room_name">test_room</string>

    <string name="id_card_number">请输入身份证号</string>
    <string name="real_name">请输入真实姓名</string>
    <string name="teacher_card_number">请输入教师工号</string>
    <string name="title_activity_all_goal">AllGoalActivity</string>

</resources>
